# MooseWare

./: .gitignore  CHANGELOG.md  README.md  autostim.ini  pyproject.toml  requirements.txt  settings.ini
.github/: FUNDING.yml
ArduinoOutput/: arduino_send_interrupt.ino.elf  arduino_send_interrupt.ino.map  arduino_send_interrupt.ino.uf2  build.options.json  compile_commands.json  includes.cache  libraries.cache
ArduinoOutput/core/: Bootsel.cpp.d  CoreMutex.cpp.d  FS.cpp.d  RP2040Support.cpp.d  RP2040USB.cpp.d  SerialPIO.cpp.d  SerialUART.cpp.d  SerialUSB.cpp.d  StackThunk.cpp.d  Tone.cpp.d  WMath.cpp.d  _freertos.cpp.d  cyw43_wrappers.cpp.d  delay.cpp.d  lock.cpp.d  lwip_wrap.cpp.d  main.cpp.d  malloc-lock.cpp.d  posix.cpp.d  stdlib_noniso.cpp.d  wiring_analog.cpp.d  wiring_digital.cpp.d  wiring_private.cpp.d  wiring_pulse.cpp.d  wiring_shift.cpp.d
ArduinoOutput/preproc/: ctags_target_for_gcc_minus_e.cpp
ArduinoOutput/sketch/: arduino_send_interrupt.ino.cpp  arduino_send_interrupt.ino.cpp.d
_old/: button.py  c_cpp_properties.json  recorder.py  sensors.py
_old/ArduinoOutput/: RPI_Pico_driver.ino.elf  RPI_Pico_driver.ino.map  RPI_Pico_driver.ino.uf2  build.options.json  compile_commands.json
_old/arduino_firmware/: ARDUINO NOTES.txt
_old/sensor_files/: dummy_sensor_template.py  humidity.py  (+4 more)
arduino_firmware/: ARDUINO NOTES.txt
internal_bus_drivers/: gpio.py  i2csensor.py  internal_controller.py  lightstrip.py  motion.py  ois.py  pressure.py  sensor_template.py
rec_app/: __init__.py  autostim.ini  main.py  run.py  settings.ini
tests/: test_rec_app.py
(+224 files in other folders)
