[tool.poetry]
name = "MooseWare"
version = "2.47.a3"
description = "Recording Software for micro chips"
authors = ["Dmitri Yousef Yengej"]

[tool.poetry.dependencies]
python = "^3.11.0"
Kivy = "^2.1.0"
h5py = "^3.6.0"
numpy = "^1.22.3"
pycryptodome = "^3.19.1"
cryptography = "^42.0.2"
Brotli = "^1.0.9"
aiodns = "^3.0.0"
aiohttp = "^3.9.2"
psutil = "^5.9.4"
pyserial = "^3.5"
pyserial-asyncio = "^0.6"
numba = "^0.57.0"
cython = "^0.29.35"
smbus = "^1.1.post2"
rpi-gpio = "^0.7.1"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
